# AfroPay-Stellar

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/anchor/: anchor.controller.ts  anchor.module.ts  anchor.service.spec.ts  anchor.service.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
apps/api/src/transaction/: transaction.controller.ts  transaction.module.ts  transaction.processor.ts  transaction.service.ts
apps/api/src/wallet/: wallet.controller.ts  wallet.module.ts  wallet.service.spec.ts  wallet.service.ts
apps/frontend/: Dockerfile  package.json  tailwind.config.js  tsconfig.json
apps/frontend/components/: BalanceCard.tsx  SendForm.tsx  TransactionList.tsx
apps/frontend/lib/: api.ts
apps/frontend/pages/: index.tsx  login.tsx
apps/frontend/store/: walletStore.ts
scripts/: setup.sh
services/python-analytics/: main.py
services/python-analytics/app/: fraud.py  models.py  routes.py
services/python-analytics/tests/: test_fraud.py
services/rust-worker/: Cargo.toml  Dockerfile
services/rust-worker/src/: main.rs  models.rs  queue.rs  stellar.rs
